WEB-3658: fix onboarding causing full reload, switched lodash imports to es-toolkit, remove user check for activiating fullstory

--- a/stories/colors.mdx
+++ b/stories/colors.mdx
@@ -1,6 +1,6 @@
 import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 import Config from '../tailwind.config.js';
-import { pick } from 'lodash';
+import { pick } from 'es-toolkit';
 
 export function renderColorSwatches(...colorKeys) {
   return Object.entries(pick(Config.theme.extend.colors, colorKeys)).map(
